Chore: Prevent overflow of DraftEditor-root

--- a/src/components/ContentSidebar/ActivityFeed/activity-feed/ActivityFeed.scss
+++ b/src/components/ContentSidebar/ActivityFeed/activity-feed/ActivityFeed.scss
@@ -97,4 +97,8 @@
             width: 100%;
         }
     }
+
+    .DraftEditor-root {
+        overflow: hidden;
+    }
 }
